Changes for Perl programming language extension Parse-CPAN-Meta

1.4400 Fri Feb 04 2011
      - Added 'json_backend' and 'yaml_backend' methods to provide
        the names of modules used for deserialization

1.4200 Mon Jan 24 2011
      - No changes from 1.41_04

1.41_04 Mon Jan 3 2011
      - Support PERL_JSON_BACKEND environment (defaulting to JSON::PP)
      - Support PERL_YAML_BACKEND environment (defaulting to CPAN::Meta:YAML)
      - Update Makefile.PL to install to sitelib on Perl 5.12+

1.41_03 Fri Dec 17 2010
	- Throw exception when CPAN::Meta::YAML has a parse error
	  (RT#47608)

1.41_02 Fri Dec 17 2010
	- Convert to using CPAN::Meta::YAML instead of YAML::Tiny

1.41_01 Fri Dec 10 2010
	- add support for JSON metafiles and load_* methods (RJBS)
	- Move binary file unpacking to test file from Makefile.PL so tests
	  will pass in the Perl core using a generated Makefile.PL
	- Move bundled uupacktool.pl to t/bin/

1.40 Sat 25 Jul 2009
	- Add core perl 5.10.1's uupacktool.pl
	- Repackage t/data/utf_16_le_bom.yml as ASCII for https://rt.cpan.org/Ticket/Display.html?id=47844

1.39 Thu 21 May 2009
	- Even though utf8 starts at 5.7+ there's no is_utf till
	  5.8.1 so skip in the tests if needed (ADAMK)

1.38 Sat 16 May 2009
	- Synchorised version numbers with YAML::Tiny
	- Code shrinkages to the bloaty Unicode/BOM code
	- Merging a ton more tests from YAML::Tiny
	- Added back some pointless options to yaml_ok that keep our
	  codebase closer to YAML::Tiny (which should help with syncing)
	- Changed exceptions to be closer to YAML::Tiny

0.05 Wed 11 Mar 2009
	- Upgrade previous release to a stable release.

0.04_01 Tue  3 Mar 2009
	- Merge Unicode / BOM fixes from YAML::Tiny

0.04 Wed  7 Jan 2009
	- Matching changes in YAML::Tiny 1.36
	- Fixing missing feature reported by H.Merijn Brand
	- Changes to make Padre-CPAN-Meta core-compatible (SMUELLER)++

0.03 Thu 20 Mar 2008
	- Adding YAML.pm compatibility in scalar context

0.02 Thu 10 Jan 2008